# aws-s3-migration

./: .coverage  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .refactor_summary.md  .unused_module_guard_whitelist  AGENTS.md  BUGFIXES.md  CI_SHARED_BUG_FIX_PROMPT.md  CLAUDE.md  CODE_ANALYSIS_REPORT.md  COMPLETION_REPORT.md  CONSOLIDATION_FINAL_SUMMARY.md  DUPLICATION_ANALYSIS.md  DUPLICATION_INVESTIGATION_SUMMARY.md  DUPLICATION_QUICK_REFERENCE.txt  DUPLICATION_REVIEW_FINDINGS.md  GEMINI.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  REMEDIATION_GUIDE.md  SECURITY.md  VIOLATION_SUMMARY.md  __init__.py  apply_block.py  aws_info.py  aws_utils.py  block_s3.py  check_state.py  ci.py  ci_shared.mk  cleanup_temp_artifacts.py  config.py  conftest.py  diagnose_speed.py  duplicate_tree_cli.py  (+35 more)
ci_shared/: ci_shared.mk
ci_shared/ci_tools/scripts/: ci.sh
ci_shared/scripts/: complexity_guard.py
ci_tools/: __init__.py
ci_tools/scripts/: __init__.py  policy_context.py  unused_module_guard.py
cleanup_temp_artifacts/: __init__.py  args_parser.py  cache.py  categories.py  cli.py  config.py  core_scanner.py  db_loader.py  reports.py  scanner.py
cost_toolkit/: README.md  __init__.py  cost_overview.py  requirements.txt  setup_environment.sh
cost_toolkit/common/: aws_client_factory.py  aws_common.py  aws_test_constants.py  backup_utils.py  cli_utils.py  confirmation_prompts.py  cost_utils.py  credential_utils.py  format_utils.py  lightsail_utils.py  route53_utils.py  s3_utils.py  security_group_constants.py  terminal_utils.py  vpc_cleanup_utils.py  waiter_utils.py
cost_toolkit/docs/: README.md  S3_SNAPSHOT_EXPORT_GUIDE.md
cost_toolkit/docs/export_logs/: manual_export_commands_20250723_182757.txt  manual_export_commands_20250723_183137.txt  manual_export_commands_20250723_183309.txt  manual_export_commands_20250723_183434.txt  manual_export_commands_20250723_183757.txt
cost_toolkit/docs/runbooks/: COMPLETE_ROO_SETUP.md  ENVIRONMENT_SETUP.md  IWANNABENEWYORK_DOMAIN_SETUP_SUMMARY.md  MANUAL_EXPORT_GUIDE.md  ROO_CONFIG_VALUES.md  ROO_SETUP_GUIDE.md
cost_toolkit/overview/: __init__.py  audit.py  cli.py  optimization.py  recommendations.py
cost_toolkit/scripts/: __init__.py  aws_client_factory.py  aws_cost_operations.py  aws_ec2_operations.py  aws_rds_operations.py  aws_route53_operations.py  aws_s3_operations.py  aws_security.py  aws_utils.py  snapshot_export_common.py
cost_toolkit/scripts/audit/: __init__.py  aws_ami_snapshot_analysis.py  aws_backup_audit.py  aws_comprehensive_vpc_audit.py  aws_ebs_audit.py  aws_ebs_post_termination_audit.py  aws_ec2_compute_detailed_audit.py  aws_ec2_usage_audit.py  aws_elastic_ip_audit.py  aws_instance_connection_info.py  aws_kms_audit.py  aws_network_interface_audit.py  aws_network_interface_deep_audit.py  aws_rds_audit.py  aws_rds_network_interface_audit.py  aws_route53_audit.py  aws_route53_domain_ownership.py  aws_s3_audit.py  aws_security_group_dependencies.py  aws_vpc_audit.py  aws_vpc_flow_logs_audit.py  vpc_audit_helpers.py
cost_toolkit/scripts/billing/: __init__.py  aws_billing_report.py  aws_hourly_billing_report.py  aws_today_billing_report.py  run_billing_report.sh  run_hourly_billing_report.sh
cost_toolkit/scripts/cleanup/: __init__.py  aws_ami_deregister_bulk.py  aws_backup_disable.py  aws_cleanup_failed_export_amis.py  aws_cleanup_script.py  aws_cleanup_unused_resources.py  aws_cloudwatch_cleanup.py  aws_ec2_instance_cleanup.py  aws_efs_cleanup.py  aws_fix_termination_protection.py  aws_fix_termination_protection_and_terminate.py  aws_global_accelerator_cleanup.py  aws_instance_termination.py  aws_kms_cleanup.py  aws_lambda_cleanup.py  aws_lightsail_cleanup.py  aws_orphaned_rds_network_interface_cleanup.py  aws_rds_cleanup.py  aws_remove_public_ip.py  aws_remove_public_ip_advanced.py  aws_route53_cleanup.py  aws_security_group_circular_cleanup.py  aws_snapshot_bulk_delete.py  aws_snapshot_cleanup_final.py  aws_stopped_instance_cleanup.py  aws_vpc_cleanup.py  aws_vpc_cleanup_unused_resources.py  aws_vpc_final_cleanup.py  aws_vpc_immediate_cleanup.py  aws_vpc_safe_deletion.py  public_ip_common.py
cost_toolkit/scripts/deprecated/: README.md  aws_direct_migration.py  aws_final_migration_attempt.py  aws_london_automated_file_analyzer.py  aws_london_automated_volume_check.py  aws_london_corrected_volume_analyzer.py  aws_london_direct_file_analyzer.py  aws_london_duplicate_detector.py  aws_london_duplicate_determination.py  aws_london_file_content_analyzer.py  aws_london_remove_tars2.py  (+12 more)
docs/: EXECUTION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FIXES_APPLIED.md  README.md  VIOLATIONS_EXAMPLES.md  VIOLATION_FIX_INDEX.md  VIOLATION_FIX_PLAN.md  VIOLATION_FIX_STATUS.md
docs/contributor-guides/: CLAUDE.md  README.md
duplicate_tree/: __init__.py  analysis.py  cache.py  cli.py  core.py  deletion.py  workflow.py
find_compressible/: __init__.py  analysis.py  cache.py  cli.py  compression.py  reporting.py
scripts/: ci.sh  requirements.txt
tests/: __init__.py  assertions.py  aws_instance_connection_test_utils.py  aws_region_test_utils.py  conftest.py  conftest_helpers.py  conftest_rds_shared.py  conftest_test_values.py  db_loader_test_utils.py  ec2_instance_test_utils.py  explore_aurora_data_fixtures.py  kms_test_utils.py  lightsail_test_utils.py  migration_sync_test_helpers.py  network_interface_test_utils.py  rds_audit_test_utils.py  s3_audit_test_utils.py  s3_operations_test_utils.py  security_group_test_utils.py  state_db_reset_test_utils.py  test_apply_block.py  test_apply_block_errors.py  test_apply_block_helpers.py  test_apply_block_main.py  test_aws_info.py  test_aws_info_buckets.py  test_aws_info_identity.py  test_aws_info_integration.py  test_aws_lambda_cleanup.py  test_aws_utils.py  test_aws_utils_clients_and_buckets.py  test_aws_utils_file_operations.py  test_aws_utils_identity_and_apply.py  test_aws_utils_policy_generation.py  test_aws_vmimport_role_setup.py  test_block_s3.py  test_block_s3_part1.py  test_block_s3_part2.py  test_block_s3_part3.py  test_ci.py  (+338 more)
(+86 files in other folders)
